--- a/hw1-cars-spec/index.html
+++ b/hw1-cars-spec/index.html
@@ -17,7 +17,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="cars.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
